[package]
name = "wgpu-custom"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
wgpu.workspace = true
pollster = { workspace = true, features = ["macro"] }

[lints]
workspace = true
